--- a/layout/_partial/post/toc.ejs
+++ b/layout/_partial/post/toc.ejs
@@ -1,18 +1,19 @@
-<% if(theme.toc){ 
-    var topic = toc(post.content, {
-            class: 'post-toc',
-            list_number: theme.toc.list_number
-        })
-    if(topic) {
-    %>
-    <aside class="post-widget">
+<% if(theme.toc){  %>
+    <aside id="toc-div" class="post-widget" <% if (post.encrypt == true) { %>style="display:none" <% } %>>
         <nav class="post-toc-wrap" id="post-toc">
             <h4>TOC</h4>
-            <%- toc(post.content, {
-                class: 'post-toc',
-                list_number: theme.toc.list_number
-            }) %>
+                <% if (post.encrypt == true) {%>
+                    <%- toc(post.origin, {
+                            class: 'post-toc',
+                            list_number: theme.toc.list_number
+                        }) %>
+                <% } else { %>
+                    <%- toc(post.content, {
+                            class: 'post-toc',
+                            list_number: theme.toc.list_number
+                        }) %>
+                <% } %>
         </nav>
     </aside>
-    <% }
+    <%
 } %>
